<resources>
    <string name="app_name">Another ToDo App</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="confirmation_text">Are you sure you want to delete this item?</string>
    <string name="continue_text">Continue</string>
    <string name="welcome_text">Welcome to Another ToDo App!</string>
    <string name="add_text">+</string>
    <string name="task_text">Task List</string>
    <string name="finished_tv_text">Finished?</string>
    <string name="back_text"><![CDATA[<]]></string>
    <string name="mark_complete_text">Done</string>
    <string name="add_todo_item_text">Add ToDo Item</string>
    <string name="clear_button_text">Clear</string>
</resources>