<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/itemTv"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/itemRv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/countTv"
        android:text="@string/task_text"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/countTv"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/itemRv"
        app:layout_constraintStart_toEndOf="@id/itemTv"
        app:layout_constraintEnd_toStartOf="@id/doneTv"
        tools:text="Task Count: 1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/doneTv"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/itemRv"
        app:layout_constraintStart_toEndOf="@id/countTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/finished_tv_text"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/itemTv"
        app:layout_constraintBottom_toTopOf="@id/itemIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHeight_percent=".5"
        tools:listitem="@layout/item_todo"
        tools:itemCount="6"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/itemRv"
        app:layout_constraintBottom_toTopOf="@id/clearBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/add_todo_item_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/add_text"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/itemIL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clearBtn"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button_text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/itemIL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/addBtn"
        app:layout_constraintEnd_toStartOf="@id/backBtn"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/back_text"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/itemIL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/clearBtn"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>